Try PR checks with ZGC
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>